--- a/src/styles/contactus.css
+++ b/src/styles/contactus.css
@@ -8,6 +8,7 @@
     align-items: center;
     margin: 5rem;
     gap: 1rem;
+    margin-bottom: 10rem;
 }
 
 
