--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,7 +1,7 @@
 .navbar_container{
     position: fixed;
     top: 50%;
-    right: 10rem;
+    right: 10vw;
     
     transform: translateY(-50%);
     
